fix broken css in compliance dashboard

--- a/src/assets/dashboard.css
+++ b/src/assets/dashboard.css
@@ -110,7 +110,7 @@ table.focus-on tbody tr.focused td {
   z-index: 1;
   outline: none !important;
 }
-.table-rep-plugin .checkbox-row input[type="checkbox"]:disabled + label {
+  .table-rep-plugin .checkbox-row input[type="checkbox"]:disabled + label {
   opacity: 0.65;
 }
 .table-rep-plugin .checkbox-row input[type="checkbox"]:focus + label::before {
@@ -266,7 +266,8 @@ table.dataTable td.focus {
   box-shadow: none !important;
   background-image: none;
 }
-    #circle-red {
+
+#circle-red {
       width: 25px;
       height: 25px;
       -webkit-border-radius: 25px;
@@ -275,7 +276,7 @@ table.dataTable td.focus {
       background: red;
       text-align: center;
       vertical-align: middle;
-      display:inline-flex; !important 
+      display:inline-flex;  
     }
 #circle-yellow {
       width: 25px;
@@ -286,7 +287,7 @@ table.dataTable td.focus {
       background: yellow;
       text-align:center;
       vertical-align: middle;
-      display:inline-flex; !important
+      display:inline-flex; 
     }
 #circle-green {
       width: 25px;
@@ -297,5 +298,5 @@ table.dataTable td.focus {
       background: green;
       text-align:center;
       vertical-align: middle;
-      display:inline-flex; !important
+      display:inline-flex; 
     }
